# pitch-analyzer

./: CMakeLists.txt  CMakeLists.txt.user.4ef733b  PitchAnalyser_en_US.ts  README.md  main.qml  qml.qrc  qtquickcontrols2.conf
App/: Bus.qml  Config.qml  Enum.qml  qmldir
Components/: BottomBar.qml  BottomBarForm.ui.qml  SettingItem.qml
Components/Buttons/: AnimatedRecordButton.qml  AnimatedRecordButtonForm.ui.qml  OpenFileButton.qml  OpenFileButtonForm.ui.qml  OpenTemplateFileButton.qml  OpenTemplateFileButtonForm.ui.qml  PlayButton.qml  PlayButtonForm.ui.qml  RecordButton.qml  RecordButtonForm.ui.qml
Components/FontAwesome/: FontAwesomeIcon.qml  FontAwesomeToolButton.qml
Pages/Home/: Home.qml  HomeForm.ui.qml
Pages/Pitch/: Pitch.qml  PitchForm.ui.qml
Pages/Record/: Record.qml  RecordForm.ui.qml
Pages/Settings/: Settings.qml  SettingsForm.ui.qml
src/: applicationconfig.h  backend.cpp  backend.h  backend_audio.cpp  backend_files.cpp  backend_settings.cpp  main.cpp
src/qml/: qmlsetting.cpp  qmlsetting.h
